k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ncba-countryinfo
  labels:
    app.kubernetes.io/part-of: country-info-service
