k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: countryinfo-app
  namespace: ncba-countryinfo
  labels:
    app: countryinfo-app
spec:
  type: ClusterIP
  selector:
    app: countryinfo-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
