k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: countryinfo-ingress
  namespace: ncba-countryinfo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: countryinfo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: countryinfo-app
                port:
                  number: 80
